better css overflow fix

--- a/frontend/css/layout.css
+++ b/frontend/css/layout.css
@@ -12,6 +12,7 @@ a {
 	width: 100%;
 	padding: 0 20px;
 	min-width: 1560px;
+	min-height: 700px;
 	background-image: url(../img/plan.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
